fix: remove gap and add handleFavorite

--- a/src/shared/ui/card-actions/card-actions.module.css
+++ b/src/shared/ui/card-actions/card-actions.module.css
@@ -1,7 +1,6 @@
 .container {
   display: inline-flex;
   align-items: center;
-  gap: 16px; /* Расстояние между кнопками */
   color: var(--text-color);
 }
 
